--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -211,13 +211,15 @@ AnimationCurveGroupingDelimiters="._/|\\"
 
 [DetailCustomWidgetExpansion]
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Crouched.IA_Crouched,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Look.IA_Look
-InputAction=
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Crouched.IA_Crouched,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Vault.IA_Vault,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Assassination.IA_Assassination
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Crouched.IA_Crouched,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Vault.IA_Vault,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Assassination.IA_Assassination
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 EditorNotifyObject=EditorNotifyObject.AnimNotify.Config
+Blueprint=
+SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Characters/RPG_Character/Animations/Vaulting
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.PluginFilters=
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
@@ -290,7 +292,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Collision.BodyInstance\" "
 InterchangeGenericAssetsPipeline="\"Object\" "
 InterchangePipelineBase="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
@@ -387,19 +389,19 @@ AnimGraphNode_SaveCachedPose="\"Object\" "
 AnimGraphNode_Slot="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
 AnimGraphNode_UseCachedPose="\"Object\" "
-SkeletalMeshComponent="\"Object\" "
-SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 AnimStateAliasNode="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 AnimGraphNode_ApplyAdditive="\"Object\" "
 AnimGraphNode_StateResult="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 InputAction="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[14]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[15]\" \"Object.Mappings.Mappings.Mappings[16]\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
@@ -413,14 +415,35 @@ EditorNotifyObject="\"Object\" \"Object.Event.Event.NotifyStateClass.Object.Root
 EditorAnimBaseObj="\"Object\" \"Object.Event.Event.NotifyStateClass.Object.RootMotionModifier\" "
 MotionWarpingComponent="\"Object\" "
 K2Node_InputKey="\"Object\" "
+BatchRetargetSettings="\"Object\" "
+BatchExportOptions="\"Object\" "
+StaticMeshComponent="\"Object\" "
+SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+Blueprint="\"Object\" "
+BlueprintCore="\"Object\" "
+CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+TextBlock="\"Object\" "
+TextLayoutWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+CanvasPanel="\"Object\" "
+PanelWidget="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -431,8 +454,10 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/Characters/RPG_Character/Animations/Vaulting/VaultOver_Montage.VaultOver_Montage
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/BP_Dummy.BP_Dummy
+OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
+OpenAssetsAtExit=/Game/Characters/RPG_Character/Animations/Assassination/Paired_Knife_Stealth_KidneyAndNeck_Vic_Montage.Paired_Knife_Stealth_KidneyAndNeck_Vic_Montage
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericAssetsPipeline]
 PipelineDisplayName=Default Assets Pipeline
@@ -560,6 +585,7 @@ AnimSequence.Animation=True
 AnimSequence.AdditiveSettings=True
 AnimSequence.Compression=True
 AnimSequence.RootMotion=True
+AnimSequence.Interchange=True
 AnimSequence.Interchange=True
 AnimSequence.File Path=True
 AnimSequence.CustomAttributes=True
@@ -1069,7 +1095,6 @@ AnimGraphNode_ApplyMeshSpaceAdditive.Settings=True
 AnimGraphNode_ApplyMeshSpaceAdditive.Performance=True
 AnimGraphNode_ApplyMeshSpaceAdditive.Tag=True
 AnimGraphNode_ApplyMeshSpaceAdditive.Bindings=True
-AnimSequence.Interchange =True
 AnimMontage.BlendOption=True
 AnimMontage.Animation=True
 AnimMontage.SyncGroup=True
@@ -1108,6 +1133,130 @@ K2Node_FunctionEntry.Outputs=True
 K2Node_CustomEvent.GraphNodeDetail=True
 K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
+BatchRetargetSettings.Source=True
+BatchRetargetSettings.Target=True
+BatchRetargetSettings.Retargeter=True
+BatchExportOptions.File=True
+BP_ThirdPersonCharacter_C.Vault=True
+BP_Dummy_C.TransformCommon=True
+BP_Dummy_C.Animation=True
+BP_Dummy_C.Mesh=True
+BP_Dummy_C.Tick=True
+BP_Dummy_C.ComponentTick=True
+BP_Dummy_C.Clothing=True
+BP_Dummy_C.LeaderPoseComponent=True
+BP_Dummy_C.Physics=True
+BP_Dummy_C.Collision=True
+BP_Dummy_C.Lighting=True
+BP_Dummy_C.AnimationRig=True
+BP_Dummy_C.Deformer=True
+BP_Dummy_C.SkinWeights=True
+BP_Dummy_C.HLOD=True
+BP_Dummy_C.Rendering=True
+BP_Dummy_C.Mobile=True
+BP_Dummy_C.Navigation=True
+BP_Dummy_C.RayTracing=True
+BP_Dummy_C.VirtualTexture=True
+BP_Dummy_C.Tags=True
+BP_Dummy_C.AssetUserData=True
+BP_Dummy_C.Replication=True
+BP_Dummy_C.ComponentReplication=True
+BP_Dummy_C.Activation=True
+BP_Dummy_C.Variable=True
+BP_Dummy_C.Cooking=True
+BP_Dummy_C.Character Movement (General Settings)=True
+BP_Dummy_C.Character Movement: Walking=True
+BP_Dummy_C.Character Movement: Jumping / Falling=True
+BP_Dummy_C.Character Movement: Gravity=True
+BP_Dummy_C.Character Movement (Networking)=True
+BP_Dummy_C.Character Movement: Swimming=True
+BP_Dummy_C.Character Movement: Flying=True
+BP_Dummy_C.Character Movement: Custom Movement=True
+BP_Dummy_C.Character Movement (Rotation Settings)=True
+BP_Dummy_C.Character Movement: Physics Interaction=True
+BP_Dummy_C.Character Movement=True
+BP_Dummy_C.Character Movement: Avoidance=True
+BP_Dummy_C.RootMotion=True
+BP_Dummy_C.Character Movement: NavMesh Movement=True
+BP_Dummy_C.NavMovement=True
+BP_Dummy_C.Velocity=True
+BP_Dummy_C.PlanarMovement=True
+BP_Dummy_C.MovementComponent=True
+BP_Dummy_C.Shape=True
+BP_Dummy_C.Character=True
+BP_Dummy_C.Camera=True
+BP_Dummy_C.Pawn=True
+BP_Dummy_C.Actor=True
+BP_Dummy_C.Input=True
+BP_Dummy_C.Events=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+BP_Dummy_C.Materials=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Imports=True
+Blueprint.Interfaces=True
+BP_Dummy_C.Networking=True
+K2Node_FunctionResult.Graph=True
+SkeletalMeshComponent.RayTracing=True
+SkeletalMeshComponent.LOD=True
+SkeletalMeshComponent.MaterialParameters=True
+SkeletalMeshComponent.TextureStreaming=True
+SkeletalMeshComponent.Mobile=True
+SkeletalMeshComponent.Replication=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Collision=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+WidgetComponent.Collision=True
+WidgetComponent.Navigation=True
+WidgetComponent.Variable=True
+WidgetComponent.Sockets=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.ComponentTick=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.HLOD=True
+WidgetComponent.Physics=True
+WidgetComponent.Rendering=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Materials=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Rendering=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
 
 [InterchangeImportDialogOptions]
 ImportContentDialogSizeX=1000
@@ -1121,20 +1270,27 @@ bPinSoundAttenuationInAssetMenu=True
 bPinSoundConcurrencyInAssetMenu=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Characters/RPG_Character/Animations/Vaulting/VaultOver_Montage
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/Characters/RPG_Character/Animations/Vaulting/VaultOver
+MRUItem0=/Game/UI/WB_AssassinatePrompt
+MRUItem1=/Game/Characters/RPG_Character/Animations/Assassination/Paired_Knife_Stealth_KidneyAndNeck_Vic_Montage
+MRUItem2=/Game/Blueprints/BP_Dummy
 MRUItem3=/Game/ThirdPerson/Input/IMC_Default
-MRUItem4=/Game/Characters/RPG_Character/Animations/Lean/LeanBlendSpace1D
-MRUItem5=/Game/Characters/RPG_Character/Animations/Lean/Lean_Left
-MRUItem6=/Game/Characters/RPG_Character/Animations/Lean/Lean_Right
-MRUItem7=/Game/ThirdPerson/Input/Actions/IA_Crouched
-MRUItem8=/Game/Characters/RPG_Character/Animations/Crouched/CrouchedBlendSpace1D
-MRUItem9=/Game/Characters/RPG_Character/Animations/Crouched/Crouch_Walk
-MRUItem10=/Game/Characters/RPG_Character/Animations/Locomotion/LocomotionBendSpace1D
-MRUItem11=/Game/Characters/Mannequins/Animations/Manny/MM_Land
-MRUItem12=/Game/Characters/RPG_Character/Animations/ABP_RPG_Character
-MRUItem13=/Game/Characters/RPG_Character/Animations/Crouched/Crouch_Idle
+MRUItem4=/Game/Characters/RPG_Character/Animations/Assassination/Paired_Knife_Stealth_KidneyAndNeck_Att_Montage
+MRUItem5=/Game/Blueprints/BPI_Assassination
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/Characters/RPG_Character/Animations/Assassination/Paired_Knife_Stealth_KidneyAndNeck_Vic
+MRUItem8=/Game/Characters/RPG_Character/Animations/Assassination/Paired_Knife_Stealth_KidneyAndNeck_Att
+MRUItem9=/Game/Characters/RPG_Character/Animations/Vaulting/VaultOver_Montage
+MRUItem10=/Game/Characters/RPG_Character/Animations/Vaulting/VaultOver
+MRUItem11=/Game/Characters/RPG_Character/Animations/Lean/LeanBlendSpace1D
+MRUItem12=/Game/Characters/RPG_Character/Animations/Lean/Lean_Left
+MRUItem13=/Game/Characters/RPG_Character/Animations/Lean/Lean_Right
+MRUItem14=/Game/ThirdPerson/Input/Actions/IA_Crouched
+MRUItem15=/Game/Characters/RPG_Character/Animations/Crouched/CrouchedBlendSpace1D
+MRUItem16=/Game/Characters/RPG_Character/Animations/Crouched/Crouch_Walk
+MRUItem17=/Game/Characters/RPG_Character/Animations/Locomotion/LocomotionBendSpace1D
+MRUItem18=/Game/Characters/Mannequins/Animations/Manny/MM_Land
+MRUItem19=/Game/Characters/RPG_Character/Animations/ABP_RPG_Character
+MRUItem20=/Game/Characters/RPG_Character/Animations/Crouched/Crouch_Idle
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/RPG_Character/Animations/Crouch_Idle.Crouch_Idle=1
@@ -1145,6 +1301,10 @@ MRUItem13=/Game/Characters/RPG_Character/Animations/Crouched/Crouch_Idle
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
 /Game/Characters/RPG_Character/Animations/Vaulting/VaultOver.VaultOver=0
 /Game/Characters/RPG_Character/Animations/Vaulting/VaultOver_Montage.VaultOver_Montage=0
+/Game/Characters/RPG_Character/Animations/Assassination/Paired_Knife_Stealth_KidneyAndNeck_Vic.Paired_Knife_Stealth_KidneyAndNeck_Vic=0
+/Game/Blueprints/BP_Dummy.BP_Dummy=0
+/Game/Characters/RPG_Character/Animations/Assassination/Paired_Knife_Stealth_KidneyAndNeck_Att_Montage.Paired_Knife_Stealth_KidneyAndNeck_Att_Montage=0
+/Game/Blueprints/BPI_Assassination.BPI_Assassination=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1260,8 +1420,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2606,5 +2766,115 @@ RecentsFiles=E:/EpicGames/UnrealEngine/UE_5.5/Engine/Plugins/Animation/ControlRi
 LastLogListing=AssetCheck
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_Dummy.BP_Dummy;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+
+[/Script/Fab.FabLocalAssets]
+PathsListingID=(("/Game/RamsterZ_FreeAnims_Volume1", "9319491d-0e91-422c-9b67-ad4bf6c01a02"))
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+bCurveEditorVisible=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+TimeWarpDisplay=Both
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowInfoButton=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+bShowMarkedFrames=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+MarkedFrameColor=(R=0.000000,G=1.000000,B=1.000000,A=0.400000)
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+bRestoreOriginalViewportOnCameraCutUnlock=True
+TreeViewWidth=0.300000
+ViewDensity=Relaxed
+AssetBrowserWidth=500.000000
+AssetBrowserHeight=300.000000
+ColumnVisibilitySettings=(ColumnName="Indicator",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Pin",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Lock",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Solo",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Mute",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Label",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Edit",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Add",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Nav",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="KeyFrame",bIsVisible=False)
+ColumnVisibilitySettings=(ColumnName="ColorPicker",bIsVisible=True)
+SidebarState=(("UMGSequencerSettings", (DrawerStates=((DrawerId="SelectionDetails")))))
+TrackFilterBars=(("UMGSequencerSettings", ()))
+bIncludePinnedInFilter=False
+bAutoExpandNodesOnFilterPass=False
+bUseFilterSubmenusForCategories=False
+bFilterBarVisible=False
+LastFilterBarLayout=Horizontal
+LastFilterBarSizeCoefficient=0.000000
+ThumbnailCaptureSettings=(CaptureFrameLocationRule=CurrentFrame)
 
